--- a/article/1/index.html
+++ b/article/1/index.html
@@ -61,7 +61,7 @@
                 <div class="t-container t-align_center">
                     <div class="t-col t-col_10 t-prefix_1">
                         <div class="t795__title t-title t-title_xs t-margin_auto" field="title" style="padding-top:0px;padding-bottom:0px;max-width:900px;">
-                            <div style="font-size:52px;line-height:14px;margin-bottom: 30px;" data-customstyle="yes"><span style="font-weight: 300;margin-bottom: 30px;">Нова ера монетарної політики</span>
+                            <div style="font-size:52px;line-height:14px;margin-bottom: 30px;" data-customstyle="yes"><span style="font-weight: 300;margin-bottom: 30px;line-height: 1;">Нова ера монетарної політики</span>
                                 <br />
                             </div>
                         </div>
